--- a/style.css
+++ b/style.css
@@ -133,3 +133,63 @@ footer {
   font-size: 12px;
   color: #777;
 }
+
+
+
+/* profileicon */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  background: white;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+}
+
+.logo {
+  font-weight: bold;
+}
+
+/* PROFILE */
+.profile-wrapper {
+  position: relative;
+}
+
+.profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+/* DROPDOWN */
+.profile-menu {
+  position: absolute;
+  right: 0;
+  top: 50px;
+  background: rgb(241, 249, 255);
+  border-radius: 12px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  width: 160px;
+  padding: 10px;
+  display: none;
+}
+
+.profile-menu p {
+  margin: 5px 0 10px;
+  font-weight: 600;
+}
+
+.profile-menu button {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  background: #ffffff;
+  border-radius: 8px;
+  margin-top: 5px;
+  cursor: pointer;
+}
+
+.profile-menu button:hover {
+  background: #ffffff;
+}
