--- a/style.css
+++ b/style.css
@@ -294,6 +294,23 @@ footer {
   transform: translateX(0);
 }
 
+
+.auth {
+  display: flex;      /* sabse important */
+  gap: 12px;          /* buttons ke beech space */
+}
+
+.login,
+.signup {
+  flex: 1;            /* equal width */
+  padding: 14px 0;
+  font-size: 16px;
+  border-radius: 10px;
+  width: 100%;
+}
+
+
+
 /* ===== TABLET & MOBILE RESPONSIVE ===== */
 
 /* TABLET (768px and below) */
